[project]
name = "tamilnadu"
version = "0.1.0"
description = ""
authors = [
    {name = "Simeon Palla",email = "simeonpalla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tamilnadu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
